# cpp-library

./: README.md  WORKSPACE
scripts/: install-hooks.sh  pre-commit.sh
string_view/: BUILD  CMakeLists.txt  README.md  string_view.cc  string_view.h  string_view_test.cc
types/: .optional.h.swo  BUILD  optional.h  optional_test.cc  string_view.h  string_view_test.cc
types/internal/: BUILD  enable_copy.h  enable_copy_move.h
